--- a/client/src/css/index.module.css
+++ b/client/src/css/index.module.css
@@ -7,7 +7,7 @@
   background-position: center;
   background-repeat: no-repeat;
   position: fixed;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .indexBtn {
