--- a/client/src/css/signup.module.css
+++ b/client/src/css/signup.module.css
@@ -8,7 +8,7 @@
   background-position: center;
   background-repeat: no-repeat;
   position: fixed;
-  overflow: auto;
+  /* overflow: auto; */
 }
 
 #signup {
@@ -17,7 +17,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0px 40px 40px 40px;
+  padding: 0px 40px 0px 40px;
 }
 
 #signup > input {
@@ -131,4 +131,8 @@
   body {
     height: auto;
   }
+.signupCard{
+  scale: 80%;
+}
+
 }
