--- a/client/src/css/fitness.module.css
+++ b/client/src/css/fitness.module.css
@@ -269,9 +269,9 @@
 }
 
 @media (min-width: 1030px) and (max-width: 1200px) {
-  .fitnessContainer {
+  /* .fitnessContainer {
     background-color: rgb(108, 110, 46);
-  }
+  } */
 
   .workoutPlanContainer {
     margin-top: -444px;
@@ -353,18 +353,29 @@
   }
 }
 @media (min-width: 900px) and (max-width: 1029px) {
-  .fitnessContainer {
+  /* .fitnessContainer {
     background-color: rgb(38, 128, 89);
+  } */
+
+  .workoutPlanContainer {
+    margin-top: -151px;
   }
 
   .streakContainer {
-    right: 65px;
-    top: -5px;
+    position: relative;
+    margin-top: 100px;
+    margin-bottom: 65px;
+
+    top: 134px;
+    right: 0;
   }
   .graph {
     display: flex;
     flex-direction: column;
     height: 169px;
+  }
+  .graphs {
+    display: flex;
   }
 
   .anExercise {
@@ -372,6 +383,37 @@
   }
   .graph p {
     display: none;
+  }
+  .PrevNext {
+    top: 182px;
+  }
+  .day {
+    margin-top: 260px;
+  }
+
+  .newPlan {
+    display: none !important;
+  }
+
+  .workoutForm {
+    top: 50px;
+    left: 1px;
+    display: flex;
+    padding: 0 10px;
+  }
+  .workoutForm label {
+    margin-top: 30px;
+  }
+  .workoutForm p {
+    display: none;
+  }
+
+  .workoutForm button {
+    margin-top: 30px;
+  }
+
+  .workoutForm button + p {
+    display: contents;
   }
 }
 
