--- a/client/src/css/fitness.module.css
+++ b/client/src/css/fitness.module.css
@@ -205,9 +205,9 @@ input[type="radio"]:active + .checkboxLabel {
   align-items: center;
   height: 500px;
   width: 500px;
-  position: fixed;
+  position: relative;
   top: 30%;
-  left: 30%;
+  margin: 0 auto;
   background-color: #2b2b2b;
   border: 2px solid green;
   z-index: 1;
@@ -216,9 +216,7 @@ input[type="radio"]:active + .checkboxLabel {
 .modalContents{
   display: flex;
   flex-direction: column;
-  /* justify-content: space-around; */
   align-items: center;
-  /* padding: 100px; */
 }
 
 .modalExercise {
@@ -671,5 +669,11 @@ input[type="radio"]:active + .checkboxLabel {
 
   .workoutForm button + p {
     display: contents;
+  }
+
+  .modal{
+    top: 20%;
+    width: 300px;
+    height: 400px;
   }
 }
