--- a/client/src/css/fitness.module.css
+++ b/client/src/css/fitness.module.css
@@ -45,10 +45,10 @@
 
 .date {
   position: absolute;
-  top: -35px;
+  top: -40px;
   left: 0;
   width: 100%;
-  /* z-index: 1; */
+  z-index: 0;
   margin: 10px 0;
 }
 
@@ -95,6 +95,7 @@
 .graph {
   display: flex;
   align-items: center;
+  justify-content: stretch;
   margin: none;
   padding: none;
   height: 100px;
@@ -163,6 +164,27 @@
   right: 0;
 }
 
+.exerciseBtnToday {
+  position: absolute;
+  left: 30%;
+  top: 30px;
+  z-index: 1;
+}
+
+.exerciseBtn1 {
+  position: absolute;
+  left: 37%;
+  top: 30px;
+  z-index: 1;
+}
+
+.exerciseBtn2 {
+  position: absolute;
+  right: 37%;
+  top: 30px;
+  z-index: 1;
+}
+
 .helpButtonsContainer {
   display: flex;
   padding-bottom: 0 !important;
@@ -214,7 +236,7 @@ input[type="radio"]:active + .checkboxLabel {
   z-index: 1;
 }
 
-.modalContents{
+.modalContents {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -225,7 +247,6 @@ input[type="radio"]:active + .checkboxLabel {
   font-size: 30px;
   margin-top: 30px;
   margin-bottom: 70px;
-  
 }
 
 .modalImage {
@@ -254,7 +275,7 @@ input[type="radio"]:active + .checkboxLabel {
   box-shadow: 0px 0px 3px 3px hsl(184, 57%, 28%);
 }
 
-.checkDone:active{
+.checkDone:active {
   background-color: white;
   width: 16px;
   border: none;
@@ -265,9 +286,8 @@ input[type="radio"]:active + .checkboxLabel {
   box-shadow: 0px 0px 3px 3px hsl(184, 57%, 28%);
 }
 
-.checkDone:hover:not(.checkDone:checked){
+.checkDone:hover:not(.checkDone:checked) {
   background-color: hsl(184, 61%, 90%);
-
 }
 
 .loading p {
@@ -284,6 +304,18 @@ input[type="radio"]:active + .checkboxLabel {
   .streakContainer {
     right: 90px;
     top: 77px;
+  }
+
+  .exerciseBtnToday {
+    left: 28%;
+  }
+
+  .exerciseBtn1 {
+    left: 35%;
+  }
+
+  .exerciseBtn2 {
+    right: 35%;
   }
 
   .workoutForm {
@@ -307,6 +339,17 @@ input[type="radio"]:active + .checkboxLabel {
     display: flex;
     flex-direction: column;
     height: 169px;
+    padding-top: 0px;
+  }
+
+  .graph:nth-child(1) {
+    height: 169px;
+    margin-top: 20px;
+  }
+
+  .graph p {
+    position: absolute;
+    width: 300px;
   }
 
   .workoutForm p {
@@ -327,6 +370,18 @@ input[type="radio"]:active + .checkboxLabel {
 
   .workoutForm form label {
     margin-bottom: 25px;
+  }
+
+  .exerciseBtnToday {
+    left: 28%;
+  }
+
+  .exerciseBtn1 {
+    left: 35%;
+  }
+
+  .exerciseBtn2 {
+    right: 35%;
   }
 }
 
@@ -373,12 +428,25 @@ input[type="radio"]:active + .checkboxLabel {
     display: flex;
     flex-direction: column;
     height: 223px;
+    margin: 0 31% 0 9%;
   }
+
+  .graph > p {
+    position: absolute;
+  }
+
+  /* .graph:nth-of-type(1) p {
+    left: 100px;
+  }
+
+  .graph:nth-of-type(2) p {
+    right: 100px;
+  } */
 
   .graphs {
     display: flex;
     width: 100%;
-    justify-content: space-around;
+    /* justify-content: space-around; */
   }
 
   .anExercise {
@@ -387,6 +455,18 @@ input[type="radio"]:active + .checkboxLabel {
 
   .PrevNext {
     top: 182px;
+  }
+
+  .exerciseBtnToday {
+    left: 21%;
+  }
+
+  .exerciseBtn1 {
+    left: 30%;
+  }
+
+  .exerciseBtn2 {
+    right: 30%;
   }
 
   .day {
@@ -462,6 +542,18 @@ input[type="radio"]:active + .checkboxLabel {
     top: 182px;
   }
 
+  .exerciseBtnToday {
+    left: 16%;
+  }
+
+  .exerciseBtn1 {
+    left: 27%;
+  }
+
+  .exerciseBtn2 {
+    right: 27%;
+  }
+
   .day {
     margin-top: 260px;
   }
@@ -533,6 +625,18 @@ input[type="radio"]:active + .checkboxLabel {
     top: 182px;
   }
 
+  .exerciseBtnToday {
+    left: 8%;
+  }
+
+  .exerciseBtn1 {
+    left: 22%;
+  }
+
+  .exerciseBtn2 {
+    right: 22%;
+  }
+
   .day {
     margin-top: 260px;
   }
@@ -593,9 +697,7 @@ input[type="radio"]:active + .checkboxLabel {
 
   .fitnessContainer {
     padding: 0;
-    margin-top: 80px;
-    margin-left: 0;
-    margin-right: 0;
+    margin: 80px 0 90px 0;
     padding: 1rem 1rem;
   }
 
@@ -657,7 +759,22 @@ input[type="radio"]:active + .checkboxLabel {
   }
 
   .PrevNext {
-    top: 411px;
+    top: 390px;
+  }
+
+  .exerciseBtnToday {
+    left: 17%;
+    margin: 0 auto;
+  }
+
+  .exerciseBtn1 {
+    left: 42%;
+    margin: 0 auto;
+  }
+
+  .exerciseBtn2 {
+    right: 24%;
+    margin: 0 auto;
   }
 
   .mainTitle {
@@ -691,7 +808,7 @@ input[type="radio"]:active + .checkboxLabel {
     display: contents;
   }
 
-  .modal{
+  .modal {
     top: 20%;
     width: 300px;
     height: 400px;
