--- a/client/src/css/coach.module.css
+++ b/client/src/css/coach.module.css
@@ -86,13 +86,18 @@ ul {
 }
 
 .userAvatar {
-  background-color: white;
+  /* background-color: white; */
   margin-right: 10px;
   align-self: flex-start;
   width: 40px;
   height: 40px;
-}
 
+}
+.userAvatarImage{
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
 .gptAvatar {
   background-color: rgb(4, 246, 61);
   width: 40px;
