--- a/client/src/css/fitness.module.css
+++ b/client/src/css/fitness.module.css
@@ -1,39 +1,44 @@
-/* THIS CODE IS SPAGHETTI, BE CAREFUL WHEN MODIFYING POSITIONS */
-
 .fitnessContainer {
+  height: 100%;
+  max-width: 1000px;
   border-radius: 10px;
   display: flex;
   text-align: center;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: auto;
   margin-top: 160px;
 
   background-color: #2b2b2b;
   color: white;
-
-  margin-left: 80px;
-  margin-right: 80px;
-  position: relative;
-  padding: 1rem 1rem;
 }
 
-.mainTitle {
-  position: absolute;
-  top: -175px;
-  left: 0;
-  right: 0;
+@media (max-width: 767px) {
+  html,
+  body {
+    height: auto;
+    margin-bottom: 80px;
+  }
+  
+  .fitnessContainer {
+    height: 100%;
+    max-width: 1000px;
+    border-radius: 10px;
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    margin-top: 80px;
+  }
 }
+
 
 .container-fluid {
   /* Sets dropdown of navbar to be same colour as actual navbar */
   background-color: inherit;
-}
-
-.workoutPlanContainer {
-  width: 100%;
-  margin-top: 200px;
-  position: relative;
 }
 
 .title {
@@ -43,48 +48,26 @@
   color: black;
 }
 
-.date {
-  position: absolute;
-  top: -40px;
-  left: 0;
-  width: 100%;
-  z-index: 0;
-  margin: 10px 0;
-}
-
 .day {
-  min-height: 400px;
-  margin-top: 136px;
+  border: 2px solid black ;
   border-radius: 10px;
-  display: flex;
-  position: relative;
-}
-
-.day div {
-  width: 100%;
-  padding: 0 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
 }
 
 .anExercise {
-  margin: 10px;
+  /* border: 2px solid grey ; */
   border-radius: 10px;
   background-color: hsl(0, 0%, 30%);
-  color: white;
-  top: 10rem;
+  margin-bottom: 10px;
+}
+
+.aKey {
+  /* border: 2px dashed green ;
+  border-radius: 10px; */
 }
 
 .streakContainer {
-  display: flex;
-  right: 157px;
-  top: 77px;
-  position: absolute;
-}
-
-.streakContainer > p {
-  display: none;
+  /* border: 2px solid red ;
+  border-radius: 10px; */
 }
 
 .doneTodaySymbol {
@@ -95,729 +78,56 @@
 .graph {
   display: flex;
   align-items: center;
-  justify-content: stretch;
   margin: none;
   padding: none;
   height: 100px;
 }
+.graphs {
+  /* display: flex; */
+}
 
 .workoutForm {
-  border-radius: 10px;
-  position: absolute;
-  top: 83px;
-  left: 68px;
+  /* border: 2px solid blue;
+  border-radius: 10px; */
   /* display: none; */
-  z-index: 1;
+  background-color: hsl(0, 0%, 30%);
 }
 
-.newPlan {
-  position: absolute;
-  top: 83px;
-}
-
-.exerciseButtons {
-  display: flex;
+.exerciseButtonsContainer {
+  /* display: inline-flex; */
   justify-content: center;
 }
 
-.exerciseButtons,
-.markButton,
-.workoutForm label {
+.completeAllButton {
+
+}
+
+.modalButton {
   background-color: hsl(183.87deg 60.78% 40%);
   color: white;
   border: none;
   margin: 5px;
 }
 
-.exerciseButtons:hover,
-.markButton:hover,
-.workoutForm label:hover {
-  background-color: hsl(184, 61%, 60%);
-  border: none;
-  outline: none;
-  color: black;
-}
-
-.exerciseButtons:active,
-.exerciseButtons:focus,
-.markButton:active,
-.markButton:focus,
-.workoutForm label:active,
-.workoutForm label:focus {
-  background-color: hsl(184, 61%, 70%);
-  box-shadow: 0px 0px 3px 3px hsl(184, 57%, 28%);
-}
-
-.exerciseButtons:disabled,
-.markButton:disabled,
-.workoutForm label:disabled {
-  background-color: #95a4a9;
-  color: black;
-}
-
-.PrevNext {
-  display: flex;
-  justify-content: center;
-  position: absolute;
-  top: 60px;
-  left: 0;
-  right: 0;
-}
-
-.exerciseBtnToday {
-  position: absolute;
-  right: 30%;
-  top: 30px;
-  z-index: 1;
-}
-
-.exerciseBtn1 {
-  position: absolute;
-  left: 37%;
-  top: 30px;
-  z-index: 1;
-}
-
-.exerciseBtn2 {
-  position: absolute;
-  right: 37%;
-  top: 30px;
-  z-index: 1;
-}
-
-.helpButtonsContainer {
-  display: flex;
-  padding-bottom: 0 !important;
-}
-
-.hiddenButton {
-  margin: auto;
-}
-
-.hiddenButton:disabled {
-  background-color: hsl(184, 61%, 70%) !important;
-  box-shadow: 0px 0px 3px 3px hsl(184, 57%, 28%) !important;
-}
-
-.checkbox {
-  display: flex;
-  flex-direction: row !important;
-  justify-content: center !important;
-}
-
-input[type="checkbox"]:checked + .checkboxLabel,
-input[type="checkbox"]:active + .checkboxLabel,
-input[type="radio"]:checked + .checkboxLabel,
-input[type="radio"]:active + .checkboxLabel {
-  border-color: rgb(92, 208, 216);
-  background-color: rgb(92, 208, 216);
-}
-
-.checkbox label {
-  /* display: none; */
-  margin-left: 10px;
-}
-
-.markButton {
-  margin-bottom: 20px;
-}
-
 .modal {
   display: flex;
   flex-direction: column;
-  align-items: center;
   height: 500px;
   width: 500px;
-  position: relative;
+  position: fixed;
   top: 30%;
-  margin: 0 auto;
-  background-color: hsl(0, 0%, 30%);
-  border-radius: 10px;
-  z-index: 1;
-}
-
-.modalContents {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.modalExercise {
-  color: white;
-  font-size: 30px;
-  margin-top: 30px;
-  margin-bottom: 70px;
+  left: 30%;
+  background-color: #2b2b2b;
+  border: 2px solid green;
 }
 
 .modalImage {
   height: 200px;
   width: 200px;
-  border-radius: 10px;
 }
 
 .hidden {
   display: none;
 }
 
-.loading {
-  display: flex;
-  align-items: center;
-}
 
-.checkDone {
-  background-color: white;
-  width: 16px;
-  border: none;
-}
-
-.checkDone:checked {
-  background-color: hsl(184, 61%, 70%);
-  box-shadow: 0px 0px 3px 3px hsl(184, 57%, 28%);
-}
-
-.checkDone:active {
-  background-color: white;
-  width: 16px;
-  border: none;
-}
-
-.checkDone:focus {
-  outline: none;
-  box-shadow: 0px 0px 3px 3px hsl(184, 57%, 28%);
-}
-
-.checkDone:hover:not(.checkDone:checked) {
-  background-color: hsl(184, 61%, 90%);
-}
-
-.loading p {
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-right: 10px;
-}
-
-@media (min-width: 1273px) and (max-width: 1420px) {
-  /* .fitnessContainer{
-    background-color: rgb(67, 33, 33);
-  } */
-
-  .streakContainer {
-    right: 90px;
-    top: 77px;
-  }
-
-  .exerciseBtnToday {
-    right: 28%;
-  }
-
-  .exerciseBtn1 {
-    left: 35%;
-  }
-
-  .exerciseBtn2 {
-    right: 35%;
-  }
-
-  .workoutForm {
-    width: 421px;
-    top: 37px;
-    left: 9px;
-  }
-}
-
-@media (min-width: 1201px) and (max-width: 1272px) {
-  /* .fitnessContainer{
-    background-color: rgb(108, 46, 110)!important;
-  } */
-
-  .streakContainer {
-    right: 90px;
-    top: -5px;
-  }
-
-  .graph {
-    display: flex;
-    flex-direction: column;
-    height: 169px;
-    padding-top: 0px;
-  }
-
-  .graph:nth-child(1) {
-    height: 169px;
-    margin-top: 20px;
-  }
-
-  .graph p {
-    position: absolute;
-    width: 300px;
-  }
-
-  .workoutForm p {
-    display: none;
-  }
-
-  .workoutForm {
-    width: 100px;
-  }
-
-  .workoutForm form {
-    display: flex;
-    width: 314px;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-  }
-
-  .workoutForm form label {
-    margin-bottom: 25px;
-  }
-
-  .exerciseBtnToday {
-    right: 28%;
-  }
-
-  .exerciseBtn1 {
-    left: 35%;
-  }
-
-  .exerciseBtn2 {
-    right: 35%;
-  }
-}
-
-@media (min-width: 1030px) and (max-width: 1200px) {
-  /* .fitnessContainer {
-    background-color: rgb(108, 110, 46);
-  } */
-
-  .workoutPlanContainer {
-    margin-top: -444px;
-  }
-
-  .workoutForm form {
-    display: flex;
-    width: 314px;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-  }
-
-  .workoutForm form label {
-    margin-bottom: 0px;
-  }
-
-  .day {
-    margin-top: 217px !important;
-  }
-
-  .PrevNext {
-    top: 146px !important;
-  }
-
-  .streakContainer {
-    position: relative;
-    margin-top: 53px;
-    margin-bottom: 65px;
-
-    top: 127px;
-    right: 0;
-    width: 100%;
-  }
-
-  .graph {
-    display: flex;
-    flex-direction: column;
-    height: 223px;
-    margin: 0 31% 0 9%;
-  }
-
-  .graph > p {
-    position: absolute;
-  }
-
-  /* .graph:nth-of-type(1) p {
-    left: 100px;
-  }
-
-  .graph:nth-of-type(2) p {
-    right: 100px;
-  } */
-
-  .graphs {
-    display: flex;
-    width: 100%;
-    /* justify-content: space-around; */
-  }
-
-  .anExercise {
-    width: auto !important;
-  }
-
-  .PrevNext {
-    top: 182px;
-  }
-
-  .exerciseBtnToday {
-    left: 21%;
-    right: unset;
-  }
-
-  .exerciseBtn1 {
-    left: 30%;
-  }
-
-  .exerciseBtn2 {
-    right: 30%;
-  }
-
-  .day {
-    margin-top: 260px;
-  }
-
-  .newPlan {
-    display: none !important;
-  }
-
-  .workoutForm {
-    top: -306px;
-    left: 1px;
-    display: flex;
-    padding: 0 10px;
-    position: relative;
-  }
-
-  .workoutForm label {
-    margin-top: 30px;
-  }
-
-  .workoutForm p {
-    display: none;
-  }
-
-  .workoutForm button {
-    margin-top: 30px;
-  }
-
-  .workoutForm button + p {
-    display: contents;
-  }
-}
-
-@media (min-width: 900px) and (max-width: 1029px) {
-  /* .fitnessContainer {
-    background-color: rgb(38, 128, 89);
-  } */
-
-  .workoutPlanContainer {
-    margin-top: -151px;
-  }
-
-  .streakContainer {
-    position: relative;
-    margin-top: 100px;
-    margin-bottom: 65px;
-
-    top: 134px;
-    right: 0;
-  }
-
-  .graph {
-    display: flex;
-    flex-direction: column;
-    height: 169px;
-  }
-
-  .graphs {
-    display: flex;
-  }
-
-  .anExercise {
-    width: auto !important;
-  }
-
-  .graph p {
-    display: none;
-  }
-
-  .PrevNext {
-    top: 182px;
-  }
-
-  .exerciseBtnToday {
-    left: 16%;
-    right: unset;
-
-  }
-
-  .exerciseBtn1 {
-    left: 27%;
-  }
-
-  .exerciseBtn2 {
-    right: 27%;
-  }
-
-  .day {
-    margin-top: 260px;
-  }
-
-  .newPlan {
-    display: none !important;
-  }
-
-  .workoutForm {
-    top: 50px;
-    left: 1px;
-    display: flex;
-    padding: 0 10px;
-  }
-
-  .workoutForm label {
-    margin-top: 30px;
-  }
-
-  .workoutForm p {
-    display: none;
-  }
-
-  .workoutForm button {
-    margin-top: 30px;
-  }
-
-  .workoutForm button + p {
-    display: contents;
-  }
-}
-
-@media (min-width: 768px) and (max-width: 899px) {
-  /* .fitnessContainer{
-    background-color: rgb(40, 38, 128);
-  } */
-  .workoutPlanContainer {
-    margin-top: -151px;
-  }
-
-  .streakContainer {
-    position: relative;
-    margin-top: 100px;
-    margin-bottom: 65px;
-
-    top: 134px;
-    right: 0;
-  }
-
-  .graph {
-    display: flex;
-    flex-direction: column;
-    height: 169px;
-  }
-
-  .graphs {
-    display: flex;
-  }
-
-  .anExercise {
-    width: auto !important;
-  }
-
-  .graph p {
-    display: none;
-  }
-
-  .PrevNext {
-    top: 182px;
-  }
-
-  .exerciseBtnToday {
-    left: 8%;
-    right: unset;
-
-  }
-
-  .exerciseBtn1 {
-    left: 22%;
-  }
-
-  .exerciseBtn2 {
-    right: 22%;
-  }
-
-  .day {
-    margin-top: 260px;
-  }
-
-  .newPlan {
-    display: none !important;
-  }
-
-  .workoutForm {
-    top: 50px;
-    left: 1px;
-    display: flex;
-    padding: 0 10px;
-  }
-
-  .workoutForm label {
-    margin-top: 30px;
-  }
-
-  .workoutForm p {
-    display: none;
-  }
-
-  .workoutForm button {
-    margin-top: 30px;
-  }
-
-  .workoutForm button + p {
-    display: contents;
-  }
-}
-
-/* THIS NEEDS TO BE HERE */
-@media (min-width: 768px) and (max-width: 1200px) {
-  .day {
-    flex-direction: column;
-  }
-
-  .day div {
-    padding: 20px;
-    width: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-  }
-
-  .helpButtonsContainer button {
-    width: 50%;
-  }
-}
-
-@media (max-width: 767px) {
-  html,
-  body {
-    height: 100%;
-  }
-
-  .fitnessContainer {
-    padding: 0;
-    margin: 80px 0 90px 0;
-    padding: 1rem 1rem;
-  }
-
-  .dietCard {
-    top: 1rem;
-  }
-
-  .day,
-  .day > strong,
-  .day div {
-    display: block;
-  }
-
-  .day div {
-    padding: 10px;
-    width: auto;
-    display: flex;
-  }
-
-  .day {
-    margin-top: 87px;
-    flex-direction: column;
-  }
-
-  .date {
-    top: -35px;
-  }
-
-  .helpButtonsContainer {
-    display: flex;
-    justify-content: center !important;
-  }
-
-  .graphs {
-    display: flex;
-    position: absolute;
-    top: 185px;
-    left: -25px;
-  }
-
-  .graph p {
-    display: none;
-  }
-
-  .workoutInnerCon {
-    margin-top: 400px;
-  }
-
-  .streakContainer {
-    position: relative;
-    margin-top: 100px;
-    margin-bottom: 65px;
-  }
-
-  .workoutPlanContainer {
-    width: 100%;
-    margin-top: -107px;
-    position: relative;
-  }
-
-  .PrevNext {
-    top: 390px;
-  }
-
-  .exerciseBtnToday {
-    left: 17%;
-    margin: 0 auto;
-    right: unset;
-
-  }
-
-  .exerciseBtn1 {
-    left: 42%;
-    margin: 0 auto;
-  }
-
-  .exerciseBtn2 {
-    right: 24%;
-    margin: 0 auto;
-  }
-
-  .mainTitle {
-    top: -39px;
-  }
-
-  .newPlan {
-    display: none !important;
-  }
-
-  .workoutForm {
-    top: 50px;
-    left: 1px;
-    display: flex;
-    padding: 0 10px;
-  }
-
-  .workoutForm label {
-    margin-top: 30px;
-  }
-
-  .workoutForm p {
-    display: none;
-  }
-
-  .workoutForm button {
-    margin-top: 30px;
-  }
-
-  .workoutForm button + p {
-    display: contents;
-  }
-
-  .modal {
-    top: 20%;
-    width: 300px;
-    height: 400px;
-  }
-}
