--- a/client/src/css/fitness.module.css
+++ b/client/src/css/fitness.module.css
@@ -49,7 +49,7 @@
 }
 
 .day {
-  border: 2px solid black ;
+  /* border: 2px solid black ; */
   border-radius: 10px;
 }
 
@@ -58,7 +58,9 @@
   border-radius: 10px;
   background-color: hsl(0, 0%, 30%);
   margin-bottom: 10px;
+  padding-bottom: 5px;
 }
+
 
 .aKey {
   /* border: 2px dashed green ;
@@ -103,6 +105,13 @@
 }
 
 .modalButton {
+  background-color: hsl(183.87deg 60.78% 40%);
+  color: white;
+  border: none;
+  margin: 5px;
+}
+
+.paginationButton {
   background-color: hsl(183.87deg 60.78% 40%);
   color: white;
   border: none;
