--- a/client/src/css/calendar.module.css
+++ b/client/src/css/calendar.module.css
@@ -8,22 +8,23 @@
 .calendar {
   height: 100%;
   width: 100%;
-  color: rgb(92, 208, 216);
+  color: #2b2b2b;
 }
 
 .calendarCard {
   height: 100%;
   width: 100%;
   max-width: 1400px;
-  margin-top: 140px;
+  margin-top: 160px;
   border-radius: 10px;
   text-align: center;
-  margin-bottom: 60px;
+  background-color: white;
 }
 
 .calendarTitle {
-  color: rgb(92, 208, 216);
   margin-bottom: 40px;
+  color: #2b2b2b;
+  font-weight: bold;
 }
 
 @media (max-width: 767px) {
