--- a/client/src/css/fitness.module.css
+++ b/client/src/css/fitness.module.css
@@ -8,8 +8,8 @@
   justify-content: center;
   align-items: center;
   margin: auto;
-  margin-top: 10px;
-  margin-bottom: 60px;
+  margin-top: 40px;
+  margin-bottom: 100px;
   background-color: #2b2b2b;
   color: white;
 }
@@ -22,7 +22,11 @@
   border-radius: 10px;
   background-color: hsl(0, 0%, 30%);
   margin-bottom: 10px;
-  padding-bottom: 5px;
+  padding: 5px;
+}
+
+.anExercise > * {
+  margin: 10px;
 }
 
 .doneTodaySymbol {
@@ -110,7 +114,7 @@
 @media (width > 721px) {
 
   .fitnessContainer {
-    margin-top: 100px;
+    margin-top: 160px;
   }
   
   /* multiple column grids */
