--- a/client/src/css/home.module.css
+++ b/client/src/css/home.module.css
@@ -131,6 +131,40 @@
   box-shadow: 0px 0px 3px 3px hsl(184, 57%, 28%);
 }
 
+.streakContainer{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  color: white;
+}
+
+.doneContainer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 120px;
+}
+
+.doneTodaySymbol{
+  height: 40px;
+  width: 40px;
+  margin-bottom: 10px;
+}
+
+.graph{
+  max-width: 120px;
+}
+
+.graphs{
+  display: flex;
+  flex-direction: row;
+}
+svg {
+  height: 100px;
+  width: 100px;
+}
+
 .exerciseDate {
   font-size: 19pt;
   color: rgb(92, 208, 216);
