--- a/client/src/css/calendar.module.css
+++ b/client/src/css/calendar.module.css
@@ -2,7 +2,6 @@
   height: 100%;
   width: 100%;
   overflow: hidden;
-  margin-bottom: 80px;
 }
 
 .calendar {
@@ -16,6 +15,7 @@
   width: 100%;
   max-width: 1400px;
   margin-top: 160px;
+  margin-bottom: 80px;
   border-radius: 10px;
   text-align: center;
   background-color: white;
@@ -23,8 +23,20 @@
 
 .calendarTitle {
   margin-bottom: 40px;
-  color: #2b2b2b;
   font-weight: bold;
+  color: #2b2b2b;
+}
+
+.fullCalendar {
+  background-color: hsl(184, 61%, 40%);
+}
+
+.workoutEventTitle,
+.workoutEvent {
+  color: white;
+  font-size: 1rem;
+  font-weight: bold;
+  margin: auto;
 }
 
 @media (max-width: 767px) {
@@ -37,9 +49,8 @@
     height: 100%;
     width: 100%;
     max-width: 1400px;
-    margin-top: 60px;
+    margin-top: 40px;
     border-radius: 10px;
     text-align: center;
-    margin-bottom: 60px;
-  }  
+  }
 }
