Fixed Fitness.jsx file after merge error

--- a/client/src/css/fitness.module.css
+++ b/client/src/css/fitness.module.css
@@ -29,6 +29,10 @@
   margin: 10px;
 }
 
+.fitnessSVG{
+  height: 120px;
+  width: 120px;
+}
 .streakContainer {
   display: flex;
   justify-content: row;
