--- a/client/src/css/home.module.css
+++ b/client/src/css/home.module.css
@@ -144,12 +144,13 @@
   justify-content: center;
   align-items: center;
   max-width: 120px;
+  margin-top: 12px;
 }
 
 .doneTodaySymbol{
-  height: 40px;
-  width: 40px;
-  margin-bottom: 10px;
+  height: 50px;
+  width: 50px;
+  margin-bottom: 23px;
 }
 
 .graph{
