Moved on-click function from div to input for completeExercisesButtons

--- a/client/src/css/fitness.module.css
+++ b/client/src/css/fitness.module.css
@@ -167,6 +167,10 @@ input[type="checkbox"]:focus + .formButtons {
   margin: 5px;
 }
 
+.doneButton{
+  pointer-events: none;
+}
+
 .modal {
   display: flex;
   flex-direction: column;
