Added back put call for generating workouts

--- a/client/src/css/diet.module.css
+++ b/client/src/css/diet.module.css
@@ -103,8 +103,8 @@
   }
 
   .dietContainer {
-    padding: 0 0 100px 0;
-    margin-top: 80px;
+    padding: 0 38px 100px 38px;
+    margin-top: 35px;
   }
 
   .dietCard {
