--- a/client/src/css/fitness.module.css
+++ b/client/src/css/fitness.module.css
@@ -106,6 +106,24 @@ input[type="checkbox"]:checked + label {
   border: solid 2px hsl(183.87deg 60.78% 40%);
 }
 
+.radioButton {
+  background-color: transparent;
+  color: white !important;
+  border: solid 2px hsl(183.87deg 60.78% 40%);
+}
+input[type="radio"]:checked + label {
+  background-color: hsl(183.87deg 60.78% 40%) !important; 
+  color: white;
+  border: solid 2px hsl(183.87deg 60.78% 40%);
+}
+
+.modalButton {
+  background-color: hsl(183.87deg 60.78% 40%);
+  color: white;
+  border: none;
+  margin: 5px;
+}
+
 .paginationButton {
   background-color: hsl(183.87deg 60.78% 40%);
   color: white;
