changed done button to complete and green colour

--- a/client/src/css/fitness.module.css
+++ b/client/src/css/fitness.module.css
@@ -105,18 +105,17 @@ input[type="checkbox"]:checked + label {
   color: white;
   border: solid 2px hsl(183.87deg 60.78% 40%);
 }
-
 .doneExerciseButton {
   background-color: transparent;
   color: white;
   border: solid 2px hsl(183.87deg 60.78% 40%);
 }
-input.btn-check:checked + label.btn {
-  background-color: red !important;
-  /* background-color: hsl(183.87deg 60.78% 40%) !important; 
+input[type="checkbox"]:checked + .doneExerciseButton {
+  background-color: #5cb85c !important; 
   color: white;
-  border: solid 2px hsl(183.87deg 60.78% 40%); */
+  border: solid 2px #5cb85c;
 }
+
 
 .radioButton {
   background-color: transparent;
