added back modal overlay

--- a/client/src/css/fitness.module.css
+++ b/client/src/css/fitness.module.css
@@ -90,6 +90,10 @@
   justify-content: center;
 }
 
+.completeAllButton {
+  margin-top: 10px;
+}
+
 .completeAllButton:disabled {
   background-color: grey;
   border: grey;
