--- a/client/src/css/calendar.module.css
+++ b/client/src/css/calendar.module.css
@@ -7,7 +7,7 @@
 .calendar {
   height: 100%;
   width: 100%;
-  color: #2b2b2b;
+  color: white;
 }
 
 .calendarCard {
@@ -18,13 +18,13 @@
   margin-bottom: 80px;
   border-radius: 10px;
   text-align: center;
-  background-color: white;
+  background-color: #2b2b2b;
 }
 
 .calendarTitle {
   margin-bottom: 40px;
   font-weight: bold;
-  color: #2b2b2b;
+  color: white;
 }
 
 .fullCalendar {
