--- a/client/src/css/password.module.css
+++ b/client/src/css/password.module.css
@@ -2,7 +2,7 @@
   height: 100%;
   width: 100%;
   margin: 0;
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
   background-image: url("../img/abstract.png");
   background-size: cover;
   background-position: center;
@@ -64,8 +64,8 @@
   color: rgb(69, 182, 148);
 }
 .signupLink:hover {
-  color:rgb(144, 213, 192);
- }
+  color: rgb(144, 213, 192);
+}
 
 .userInput {
   border: 2px solid #c0c0c0;
