--- a/client/src/css/login.module.css
+++ b/client/src/css/login.module.css
@@ -2,7 +2,7 @@
   height: 100%;
   width: 100%;
   margin: 0;
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
   background-image: url("../img/abstract.png");
   background-size: cover;
   background-position: center;
@@ -28,7 +28,7 @@
   padding: 10px;
 }
 
-.errorMessage{
+.errorMessage {
   color: red;
 }
 #loginHeader {
@@ -71,7 +71,7 @@
 }
 
 .signupLink:hover {
- color:rgb(144, 213, 192);
+  color: rgb(144, 213, 192);
 }
 
 .userInput {
@@ -86,7 +86,7 @@
   outline: solid rgb(129, 126, 126) 2px;
 }
 
-.inputName{
+.inputName {
   color: gray;
   position: relative;
   bottom: 35px;
@@ -95,7 +95,7 @@
   display: inline-block;
 }
 
-.inputLabel{
+.inputLabel {
   height: 0;
 }
 
