Added in code to display current day's suggested caloric intake and basic tracking

--- a/client/src/css/home.module.css
+++ b/client/src/css/home.module.css
@@ -87,7 +87,9 @@
 .diet {
   margin-left: 0 !important;
 }
-
+.calories {
+  color: white;
+}
 .progressHeader {
   text-align: center;
   color: rgb(92, 208, 216);
